<resources>
    <string name="app_name">Symbiotic Learning</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_screen">Home</string>
    <string name="title_activity_exam_board_screen">Exam Boards</string>
    <string name="title_activity_qualification_screen">Qualifications</string>
    <string name="title_activity_course_list_screen">Courses</string>
    <string name="title_activity_course_screen">Course</string>
    <string name="title_activity_course_points">Course Points</string>
    <string name="title_activity_revision_screen">Revision</string>
    <string name="you_have_no_courses_points">You currently have no courses points</string>
    <string name="no_courses_points_instructions">To add course points and continue press Continue.</string>
    <string name="machine_generated_sentences_warning">The sentence form of these course point may be machine generated and thus can be inaccurate.</string>
    <string name="edit_tab_instructions">You can edit these sentences in the Edit tab (as well as making further edits such as adding your own course points).</string>
    <string name="you_have_no_courses">You currently have no courses.</string>
    <string name="no_courses_instructions">To add courses and continue click Continue</string>
    <string name="the_answer_is">The correct answer is: </string>
    <string name="delete">Delete</string>
    <string name="gcse">GCSE</string>
    <string name="as_and_a_level">AS and A-Level</string>
    <string name="getting_latest_list">Getting the Latest List of </string>
    <string name="courses">courses</string>
    <string name="this_should_be_quick">Please wait: this should be brief</string>
    <string name="course_id">Course ID</string>
    <string name="loading_course_points">Loading Testable Material</string>
    <string name="add_new_course_point">Add New Course Point</string>
    <string name="enter_flashcard_front">Enter the front of the course point\'s flashcard form</string>
    <string name="enter_flashcard_back">Enter the back of the course point\'s flashcard form</string>
    <string name="enter_sentence">Enter the point\'s sentence form</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="colloquial_name">Colloquial Name</string>
    <string name="qualification">Qualification</string>
    <string name="exam_board">Exam Board</string>
    <string name="key_date">Key Date</string>
    <string name="key_date_details">Key Date Details</string>
    <string name="okay">Continue</string>
    <string name="initialising_app">Initialising App</string>
    <string name="database_location">my-db</string>
    <string name="well_done">Well Done</string>
    <string name="percentage_similar">% Similar</string>
    <string name="almost">Almost</string>
    <string name="wrong">Wrong - Only</string>
    <string name="generate_new_question">Generate New Question</string>
    <string name="edit_course_points">Edit This Course Point As You Wish</string>
    <string name="make_these_changes">Make These Changes</string>
    <string name="official_name">Official Name</string>
    <string name="get_information_from_aqa">Getting Additional Information From AQA</string>
    <string name="get_cram_courses">Finding Cram Courses Related to This Course</string>
    <string name="get_information_from_cram_courses">Getting Flashcards From Related Cram Courses</string>
    <string name="get_memrise_courses">Finding Memrise Courses Related to This Course</string>
    <string name="getting_information_from_memrise_courses">Getting Flashcards From Related Memrise Courses</string>
    <string name="subject">Subject</string>
    <string name="flashcard_front">Flashcard Front</string>
    <string name="flashcard_back">Flashcard Back</string>
    <string name="sentence">Sentence</string>
    <string name="card_side">Card Side</string>
    <string name="textview">TextView</string>
    <string name="aqa">AQA</string>
    <string name="course_points">Course Points</string>
    <string name="temp_date">1st Jan</string>
    <string name="temp_date_detail">Paper 1 Exam</string>
    <string name="temp_course">Accounting</string>
    <string name="question_answer">Question-Answer</string>
    <string name="fill_in_the_gap">Fill in the Gap</string>
    <string name="temp_question">This is a question</string>
    <string name="temp_answer">Please Enter Your Answer Here</string>
    <string name="home">Home</string>
    <string name="completely_wrong">Completely Wrong</string>
    <string name="deleting_course_point_warning">Are you sure you want to delete this course point?</string>
    <string name="deleting_course_warning">Are you sure you want to delete this course?</string>
    <string name="perspective">Perspective</string>
    <string name="revision">Revision</string>
    <string name="you_can_view_course_points">You can view course points for this course in both their sentence and flashcard form.</string>
    <string name="no_wifi_available">No WiFi Available</string>
    <string name="press_try_again">To try again press Try Again</string>
    <string name="try_again">Try Again</string>
    <string name="arrow_pointing_left">Arrow pointing left</string>
    <string name="arrow_pointing_right">Arrow pointing right</string>
    <string name="delete_course_button">Delete Course Button</string>
    <string name="toggle_question_answer_format">Toggle Question Answer Format</string>
    <string name="toggle_fill_in_the_gap_format">Toggle Fill in the Gap Format</string>
    <string name="sentences">Sentences</string>
    <string name="flashcards">Flashcards</string>
    <string name="edit">Edit</string>
    <string name="fill_in_the_gap_title">Fill In The Gap</string>
    <string name="question_answer_title">Question-Answer</string>
    <string name="you_have_enabled">You have enabled</string>
    <string name="questions">questions</string>
    <string name="you_have_disabled">You have disabled</string>
    <string name="no_answer">No answer has been received</string>
    <string name="please_reattempt_question">Please re-attempt the question</string>
    <string name="reattempt">Re-attempt</string>
    <string name="warning">Warning</string>
    <string name="blank_components_warning">No components of a course point can be blank</string>
    <string name="you_need_to_be_connected_to_wifi">You need to be connected to WiFi</string>
    <string name="no_wifi_available_instructions">This may be due to the device not supporting WiFi. Otherwise you may try restarting the app</string>
    <string name="cant_access_intents">Unable to access information from previous screen</string>
    <string name="press_button_to_return_to_home_screen">To continue press Continue and you be brought back to the Home Screen</string>
    <string name="course">Course</string>
    <string name="cant_access_database">Unable to access database of courses and their course points</string>
    <string name="please_restart_app">Please try restarting the app</string>
    <string name="unable_to_delete_course">Unable to delete course</string>
    <string name="unable_to_delete_course_point">Unable to delete course point</string>
    <string name="unable_to_load_courses">Unable to load courses</string>
    <string name="press_button_to_go_to_exam_board_screen">This may be resolved by adding a course. Pressing Continue will bring you to the Exam Board Screen</string>
    <string name="unable_to_access_course_points">Unable to access course points</string>
    <string name="unable_to_add_course_point">Unable to add course point</string>
    <string name="unable_to_update_course_point">Unable to update course point</string>
    <string name="connection_timed_out">Connection timed out</string>
    <string name="timeout_instructions">You may either reattempt with double the timeout or cancel adding this course</string>
    <string name="double_the_timeout">Double the timeout</string>
    <string name="error_acessing_AQA_website">An error occurred accessing the AQA website for this course</string>
    <string name="error_accessing_AQA_website_instructions">You may either re-try or cancel adding this course</string>
    <string name="issue_with_getting_cram_courses">Issue with getting Cram courses</string>
    <string name="issue_with_memrise_course">Issue with Memrise course</string>

</resources>
