<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hector.csprojectprogramc.Activities.QualificationListScreen">


    <android.support.v7.widget.CardView
        android:id="@+id/qualificationCard"
        android:layout_below="@+id/examboardCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/qualificationInCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/green"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/qualification"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:elevation="3dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/qualificationSpecificNameInCourse"
                android:text="@string/gcse"
                android:layout_below="@+id/qualificationInCourse"
                android:textAlignment="center"
                android:textColor="@color/darkDarkGrey"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/examboardCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"



        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/examboardInCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/red"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/exam_board"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:elevation="3dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/examboardSpecificNameInCourse"
                android:text="@string/aqa"
                android:layout_below="@+id/examboardInCourse"
                android:textAlignment="center"
                android:textColor="@color/darkDarkGrey"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/coursePoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/coursePointInCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/course_points"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/dateCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qualificationCard"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dateCardInCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/blue"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/temp_date"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:elevation="3dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateSpecificCardInCourse"
                android:text="@string/temp_date_detail"
                android:layout_below="@+id/dateCardInCourse"
                android:textAlignment="center"
                android:textColor="@color/darkDarkGrey"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>