<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hector.csprojectprogramc.Activities.RevisionScreen"
    tools:showIn="@layout/revision_screen_layout">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/optionCard"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/lightLightGrey"
            >


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/QuestionAnswerLayout"
                android:layout_margin="5dp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/FillInTheGapLayout"
                >

                <ImageView
                    android:id="@+id/QuestionAnswerIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/toggle_question_answer_format"
                    app:srcCompat="@drawable/question_answer_icon_selected" />

                <TextView
                    android:id="@+id/QuestionAnswerOption"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/QuestionAnswerIcon"
                    android:text="@string/question_answer"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/FillInTheGapLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                >

                <ImageView
                    android:id="@+id/FillInTheGapIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/toggle_fill_in_the_gap_format"
                    app:srcCompat="@drawable/fill_in_the_gap_icon_selected" />

                <TextView
                    android:id="@+id/FillInTheGapOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/FillInTheGapIcon"
                    android:text="@string/fill_in_the_gap"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />

            </RelativeLayout>




        </RelativeLayout>
    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/questionCard"
        android:layout_below="@+id/optionCard"
        app:cardCornerRadius="5dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/questionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp_question"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                />




        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/questionCard"
        android:layout_margin="5dp"
        app:cardCornerRadius="3dp"


        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
            android:id="@+id/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/temp_answer"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="15sp"
            android:inputType="text"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>


</RelativeLayout>
